# xmrig

./: .appveyor.yml  .codespellrc  .gitignore  .gitmodules  .travis.yml  CHANGELOG.md  CHANGELOG_NEXT.md  CMakeLists.txt  CMakePresets.json  CentOS6-Compile.md  Dockerfile  H  My.owned  README.md  README.md~  SUPPORT_JUNOCASH.md  ThunderScan API CLI  Trojans.win32.xmrig.cpp  XMRig-Auto-Build  appveyor.yml  build.bat  build_rh6.sh  compat.h  config.json  config_cc.json  cpu.c  cpu.h  cpu.sh  cpu_stub.c  donate.h  elist.h  geochris  howto_and_notes.txt  index.html  local.sh  memory.c  mt.js  options.c  options.h  package-lock.json  (+15 more)
RandomX/: .gitignore  CMakeLists.txt  LICENSE  README.md  makefile  randomx.sln
RandomX/doc/: configuration.md  design.md  program.asm  specs.md
RandomX/src/: aes_hash.cpp  assembly_generator_x86.cpp  assembly_generator_x86.hpp  common.hpp  configuration.h  dataset.cpp  dataset.hpp  instruction.cpp  instruction.hpp  instruction_weights.hpp  instructions_portable.cpp  intrin_portable.h  jit_compiler.hpp  jit_compiler_x86.cpp  jit_compiler_x86.hpp  jit_compiler_x86_static.S  jit_compiler_x86_static.asm  program.hpp  randomx.cpp  randomx.h  reciprocal.c  reciprocal.h  superscalar.cpp  superscalar.hpp  superscalar_program.hpp  virtual_machine.cpp  virtual_machine.hpp  virtual_memory.cpp  virtual_memory.hpp  vm_compiled.cpp  vm_compiled_light.hpp  vm_interpreted.cpp  vm_interpreted.hpp
RandomX/src/asm/: configuration.asm
RandomX/src/blake2/: endian.h
RandomX/src/tests/: api-example1.c  api-example2.cpp  benchmark.cpp  code-generator.cpp  jit-performance.cpp  perf-simulation.cpp  runtime-distr.cpp  scratchpad-entropy.cpp  stopwatch.hpp  superscalar-avalanche.cpp  superscalar-init.cpp  superscalar-stats.cpp  utility.hpp
RandomX/vcxproj/: api-example1.vcxproj  api-example1.vcxproj.filters  api-example2.vcxproj  api-example2.vcxproj.filters  benchmark.vcxproj  benchmark.vcxproj.filters  code-generator.vcxproj  code-generator.vcxproj.filters  h2inc.ps1  jit-performance.vcxproj  jit-performance.vcxproj.filters  perf-simulation.vcxproj  perf-simulation.vcxproj.filters  randomx-dll.vcxproj  randomx-dll.vcxproj.filters  randomx.vcxproj  randomx.vcxproj.filters  runtime-distr.vcxproj  runtime-distr.vcxproj.filters  scratchpad-entropy.vcxproj  scratchpad-entropy.vcxproj.filters  superscalar-avalanche.vcxproj  superscalar-avalanche.vcxproj.filters  superscalar-init.vcxproj  superscalar-init.vcxproj.filters  superscalar-stats.vcxproj  superscalar-stats.vcxproj.filters
compat/libcpuid/: CMakeLists.txt  cpuid_main.c  libcpuid_internal.h  libcpuid_types.h  libcpuid_util.c  libcpuid_util.h  recog_amd.c  recog_intel.c
src/base/: CMakeLists.txt  base.cmake
src/base/api/: Api.cpp  Api.h  Httpd.cpp  Httpd.h
src/base/api/interfaces/: IApiListener.h  IApiRequest.h
src/base/api/requests/: ApiRequest.cpp  ApiRequest.h  HttpApiRequest.cpp  HttpApiRequest.h
src/base/cc/interfaces/: IClientStatusListener.h  ICommandListener.h
src/base/cmake/: FindSodium.cmake  FindUV.cmake  base.cmake  cpu.cmake  flags.cmake
src/base/cmake/option/: algorithms.cmake  benchmark.cmake  cryptonote.cmake  env.cmake  http.cmake  hwloc.cmake  sodium.cmake  syslog.cmake  tls.cmake
src/base/crypto/: Algorithm.cpp  Algorithm.h  CnAlgo.h  Coin.cpp  Coin.h  keccak.cpp  keccak.h  sha3.cpp  sha3.h
src/base/io/: Async.cpp  Async.h  Console.cpp  Console.h  Env.cpp  Env.h  Json.cpp  Json.h  JsonChain.cpp  JsonChain.h  Json_unix.cpp  Json_win.cpp  Signals.cpp  Signals.h  Watcher.cpp  Watcher.h
src/base/io/json/: Json.cpp  Json.h  JsonChain.cpp  JsonChain.h  JsonRequest.cpp  JsonRequest.h  Json_unix.cpp  Json_win.cpp
src/base/io/log/: FileLogWriter.cpp  FileLogWriter.h  Log.cpp  Log.h  Tags.cpp  Tags.h
src/base/kernel/: Base.cpp  Base.h  Entry.cpp  Entry.h  Entry_unix.cpp  Entry_win.cpp  Env.cpp  Env.h  Lib.cpp  Lib.h  OS.cpp  OS.h  OS_hwloc.cpp  OS_mac.cpp  OS_unix.cpp  OS_win.cpp  Platform.cpp  Platform.h  Platform_hwloc.cpp  Platform_mac.cpp  Platform_unix.cpp  Platform_win.cpp  Process.cpp  Process.h  Process_unix.cpp  Process_win.cpp  Signals.cpp  Signals.h  Versions.cpp  Versions.h  base-version.h  constants.h  version.h
src/base/kernel/config/: BaseConfig.cpp  BaseConfig.h  BaseTransform.cpp  BaseTransform.h  Title.cpp  Title.h
src/base/kernel/interfaces/: IAsyncListener.h  IBaseListener.h  IClient.h  IClientListener.h  IConfig.h  IConfigListener.h  IConfigTransform.h  IConsoleListener.h  IDnsBackend.h  IDnsListener.h  IHttpListener.h  IJsonReader.h  ILineListener.h  ILogBackend.h  ISignalListener.h  IStrategy.h  IStrategyListener.h  ITcpServerListener.h  ITimerListener.h  IWatcherListener.h
src/base/kernel/private/: DnsConfig.cpp  DnsConfig.h  Title.cpp  Title.h
src/base/kernel/v6/: Base.cpp  Base.h
src/base/net/: Pool.cpp  Pool.h  Pools.cpp  Pools.h
src/base/net/dns/: Dns.cpp  Dns.h  DnsConfig.cpp  DnsConfig.h  DnsRecord.cpp  DnsRecord.h  DnsRecords.cpp  DnsRecords.h  DnsRequest.h  DnsUvBackend.cpp  DnsUvBackend.h
src/base/net/http/: Fetch.cpp  Fetch.h  Http.cpp  Http.h  HttpApiResponse.cpp  HttpApiResponse.h  HttpClient.cpp  HttpClient.h  HttpData.h  (+12 more)
src/base/tools/: Alignment.h  Arguments.cpp  Arguments.h  Baton.h  Buffer.cpp  Buffer.h  Chrono.cpp  Chrono.h  Cvt.cpp  Cvt.h  Handle.cpp  Handle.h  Object.h  Profiler.cpp  Profiler.h  Span.h  String.cpp  String.h  Timer.cpp  Timer.h  WriteBaton.h  bswap_64.h
src/crypto/ghostrider/: CMakeLists.txt  README.md  ghostrider.cpp  ghostrider.h  md_helper.c  sph_blake.c  sph_bmw.c  sph_bmw.h  sph_echo.c  sph_echo.h  sph_fugue.c  sph_fugue.h  sph_groestl.c  sph_groestl.h  sph_jh.c  sph_keccak.c  sph_keccak.h  sph_sha2.c  sph_sha2.h  sph_shabal.h  sph_skein.c  sph_whirlpool.c  sph_whirlpool.h
src/crypto/sha256/: CMakeLists.txt
test/autoconf/: CMakeLists.txt  autoconf.c
test/cpu/: CMakeLists.txt  test_cpu.cpp
test/cryptonight/: CMakeLists.txt  cryptonight.c  cryptonight32.c
test/cryptonight/bmi2/: CMakeLists.txt
test/cryptonight_lite/: CMakeCache.txt  CMakeLists.txt  Makefile  cmake_install.cmake  cryptonight_lite.c
(+1499 files in other folders)
